# napari-vodex

./: README.md  contribute.md  pyproject.toml  setup.cfg  terminology.md  tox.ini
data/test/: test.db
src/napari_vodex/: __init__.py  _widget.py  annotations_tab_widget.py  drag_widget.py  file_tab_widget.py  napari.yaml  qt_widget.py  utils.py  vodex_gui.py  widgets.py
src/napari_vodex/_tests/: test_widget.py  test_widgets.py
src/tutorials/: dialog.py
