[metadata]
name = napari-vodex
version = 0.0.7
author = Anna Nadtochiy
author_email = nadtochi@usc.edu
url = https://github.com/LemonJust/vodex
license = MIT
description = A napari plugin for volumetric data time annotation.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
project_urls =
    Source Code = https://github.com/LemonJust/vodex

[options]
packages = find:
include_package_data = True
python_requires = >=3.7
package_dir =
    =src

# add your package requirements here
install_requires =
    numpy
	scikit-image
	napari[all]
	pandas
	matplotlib
	sklearn
	trackpy

[options.packages.find]
where = src

[options.package_data]
napari-vodex =
    napari.yaml

[options.entry_points]
napari.manifest =
    napari-vodex = napari_vodex:napari.yaml
